# HyperStream

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  COMMIT_MSG.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  am.ndjson  cluster.ndjson
.github/workflows/: ci.yml  golden-compat.yml  perf-regression.yml  refresh_ubuntu_baselines.yml
Docs/: DEVLOG.md  Reproducibility.md  Serialization.md  ci_baseline_refresh.md  hybrid_allocation_analysis.md
benchmarks/: CMakeLists.txt  am_bench.cpp  bind_bench.cpp  cluster_bench.cpp  config_bench.cpp  hamming_bench.cpp  permute_bench.cpp
build-itemmem/tests/: associative_tests[1]_include.cmake  associative_tests[1]_tests.cmake  backend_tests[1]_include.cmake  backend_tests[1]_tests.cmake  capability_tests[1]_include.cmake  capability_tests[1]_tests.cmake  config_tests[1]_include.cmake  config_tests[1]_tests.cmake  core_ops_tests[1]_include.cmake  core_ops_tests[1]_tests.cmake  dispatch_property_tests[1]_include.cmake  dispatch_property_tests[1]_tests.cmake  dispatch_tests[1]_include.cmake  dispatch_tests[1]_tests.cmake  edge_case_tests[1]_include.cmake  edge_case_tests[1]_tests.cmake  encoding_tests[1]_include.cmake  encoding_tests[1]_tests.cmake  forced_scalar_tests[1]_include.cmake  forced_scalar_tests[1]_tests.cmake  item_memory_tests[1]_include.cmake  item_memory_tests[1]_tests.cmake  numeric_tests[1]_include.cmake  numeric_tests[1]_tests.cmake  policy_tests[1]_include.cmake  policy_tests[1]_tests.cmake  serialization_tests[1]_include.cmake  serialization_tests[1]_tests.cmake  symbol_encoder_tests[1]_include.cmake  symbol_encoder_tests[1]_tests.cmake  wide_counter_smoke_tests[1]_include.cmake  wide_counter_smoke_tests[1]_tests.cmake
build-msvc/tests/: associative_tests[1]_include.cmake  associative_tests[1]_tests.cmake  backend_tests[1]_include.cmake  backend_tests[1]_tests.cmake  capability_tests[1]_include.cmake  capability_tests[1]_tests.cmake  config_tests[1]_include.cmake  config_tests[1]_tests.cmake  core_ops_tests[1]_include.cmake  core_ops_tests[1]_tests.cmake  dispatch_property_tests[1]_include.cmake  dispatch_property_tests[1]_tests.cmake  dispatch_tests[1]_include.cmake  dispatch_tests[1]_tests.cmake  edge_case_tests[1]_include.cmake  edge_case_tests[1]_tests.cmake  encoding_tests[1]_include.cmake  encoding_tests[1]_tests.cmake  forced_scalar_tests[1]_include.cmake  forced_scalar_tests[1]_tests.cmake  policy_tests[1]_include.cmake  policy_tests[1]_tests.cmake  wide_counter_smoke_tests[1]_include.cmake  wide_counter_smoke_tests[1]_tests.cmake
build_capi/tests/: associative_tests[1]_include.cmake  backend_tests[1]_include.cmake  capability_tests[1]_include.cmake  config_tests[1]_include.cmake  core_ops_tests[1]_include.cmake  dispatch_property_tests[1]_include.cmake  dispatch_tests[1]_include.cmake  edge_case_tests[1]_include.cmake  encoder_determinism_tests[1]_include.cmake  encoding_tests[1]_include.cmake  forced_scalar_tests[1]_include.cmake  golden_serialization_tests[1]_include.cmake  item_memory_tests[1]_include.cmake  numeric_tests[1]_include.cmake  policy_tests[1]_include.cmake  serialization_tests[1]_include.cmake  snapshot_restore_tests[1]_include.cmake  streaming_determinism_tests[1]_include.cmake  symbol_encoder_tests[1]_include.cmake  wide_counter_smoke_tests[1]_include.cmake
build_ci/tests/: associative_tests[1]_include.cmake  associative_tests[1]_tests.cmake  backend_tests[1]_include.cmake  backend_tests[1]_tests.cmake  capability_tests[1]_include.cmake  capability_tests[1]_tests.cmake  config_tests[1]_include.cmake  config_tests[1]_tests.cmake  core_ops_constexpr_tests[1]_include.cmake  core_ops_constexpr_tests[1]_tests.cmake  core_ops_tests[1]_include.cmake  core_ops_tests[1]_tests.cmake  dispatch_property_tests[1]_include.cmake  dispatch_property_tests[1]_tests.cmake  dispatch_tests[1]_include.cmake  dispatch_tests[1]_tests.cmake  edge_case_tests[1]_include.cmake  edge_case_tests[1]_tests.cmake  encoder_determinism_tests[1]_include.cmake  encoder_determinism_tests[1]_tests.cmake  encoding_tests[1]_include.cmake  encoding_tests[1]_tests.cmake  forced_scalar_tests[1]_include.cmake  forced_scalar_tests[1]_tests.cmake  golden_serialization_tests[1]_include.cmake  golden_serialization_tests[1]_tests.cmake  item_memory_tests[1]_include.cmake  item_memory_tests[1]_tests.cmake  numeric_tests[1]_include.cmake  numeric_tests[1]_tests.cmake  policy_tests[1]_include.cmake  policy_tests[1]_tests.cmake  serialization_tests[1]_include.cmake  serialization_tests[1]_tests.cmake  snapshot_restore_tests[1]_include.cmake  snapshot_restore_tests[1]_tests.cmake  streaming_determinism_tests[1]_include.cmake  streaming_determinism_tests[1]_tests.cmake  symbol_encoder_tests[1]_include.cmake  symbol_encoder_tests[1]_tests.cmake  (+2 more)
build_ninja_msvc/: .ninja_deps  .ninja_log  build.ninja
build_ninja_msvc/tests/: backend_tests[1]_include.cmake  (+41 more)
scripts/: bench_check.py  gen_streaming_golden.py  refresh_baselines.sh  run_clang_tidy_headers.py  run_clang_tidy_one.py  run_clang_tidy_tus.py
src/: hyperstream_c_api.cpp
tests/: CMakeLists.txt  associative_tests.cc  backend_tests.cc  c_api_tests.c  capability_tests.cc  config_tests.cc  core_ops_constexpr_tests.cc  core_ops_extended_tests.cc  core_ops_tests.cc  dispatch_property_tests.cc  dispatch_tests.cc  edge_case_tests.cc  encoder_determinism_tests.cc  encoding_tests.cc  forced_scalar_tests.cc  golden_serialization_tests.cc  item_memory_tests.cc  numeric_tests.cc  policy_tests.cc  serialization_tests.cc  snapshot_restore_tests.cc  streaming_determinism_tests.cc  symbol_encoder_tests.cc  wide_counter_smoke_tests.cc
tests/golden/: encoder_hashes.json  snapshot_16.cluster.hser1  snapshot_16.prototype.hser1  snapshot_16.state.json  snapshot_32.cluster.hser1  snapshot_32.prototype.hser1  snapshot_32.state.json  snapshot_48.cluster.hser1  snapshot_48.prototype.hser1  snapshot_48.state.json  streaming_events.ndjson  streaming_hashes.json
tests/golden/hser1/: cluster_d128_c4.hser1  cluster_d96_c3.hser1  manifest.json  prototype_d128_c4.hser1  prototype_d96_c3.hser1
(+1119 files in other folders)
